# uhppoted-breakout

./: .gitignore  DEBUG.md  Makefile  NOTES.md  README.md  TODO.md  design-notes.md
.github/workflows/: build.yml
Rev.0/: .gitignore  NOTES.md  checklist.md
Rev.0/cli/: .gitignore  Makefile  commands.py  main.py  pool.py  requirements.txt  tls.py
Rev.0/cli/.cli/: pyvenv.cfg
Rev.0/driver/go/: .config
Rev.0/driver/go/MIB/: MIB.go  controller.go
Rev.0/driver/go/UT0311/: UT0311.go
Rev.0/driver/go/ssmp/: rqid.go  ssmp.go
Rev.0/driver/python/: Makefile
Rev.0/driver/rpc/: Makefile
Rev.0/driver/rpc/rpcd/: rpcd.go
Rev.0/driver/rpc/ssmp/: ssmp.go
Rev.0/driver/simulator/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
Rev.0/driver/simulator/src/: main.py
Rev.0/emulator/: .config  .gitignore  Makefile  breakout.py  cli.py  go.mod  go.sum
Rev.0/emulator/MIB/: MIB.go  OID.go  controller.go
Rev.0/emulator/MIB/types/: OID.go
Rev.0/emulator/UT0311/: UT0311.go  config.go  get-controller.go  net.go  network.go
Rev.0/emulator/cli/: .gitignore  Makefile  commands.py
Rev.0/emulator/cmd/emulator/: main.go
Rev.0/emulator/cmd/ssmp/: main.go
Rev.0/emulator/crypt/otp/: hotp_test.go
Rev.0/emulator/encoding/bisync/: bisync.go  crc.go  crc_test.go
Rev.0/emulator/go/: .config.rpc  .config.stub  .config.unix  .gitignore  Makefile  go.mod  go.sum
Rev.0/emulator/go/MIB/: MIB.go  OID.go  OID_test.go  controller.go
Rev.0/emulator/go/UT0311/: UT0311.go  cm.go  constants.go  delete-card.go  get-card-by-index.go  get-card.go  get-controller.go  get-door.go  get-listener.go  get-status.go  get-time.go  network.go  put-card.go  set-door.go  set-listener.go  set-time.go  tcp.go  tls.go  udp.go
Rev.0/emulator/go/cards/: card.go  cards.go
Rev.0/emulator/go/config/: config.go
Rev.0/emulator/go/driver/: driver.go
Rev.0/emulator/go/events/: events.go
Rev.0/emulator/go/scmp/: MIB.go  OID.go  OID_test.go  SCMP.go
Rev.0/emulator/go/ssmp/: rqid.go  ssmp.go
Rev.0/emulator/go/system/: system.go
Rev.0/emulator/log/: log.go
Rev.0/emulator/python/: breakout.py
Rev.0/emulator/python/src/: breakout.py
Rev.0/emulator/ssmp/: bisync.go  rqid.go  ssmp.go
Rev.0/emulator/ssmp/auth/: hotp.go  hotp_test.go
Rev.0/emulator/tests/cli/: .gitignore  requirements.txt
Rev.0/firmware/: Makefile
Rev.0/firmware/core/include/: I2C0.h  I2C1.h  IOX.h  MIB.h  MIBxx.h  RTC.h  SPI.h  SSMP.h  U2.h  U3.h  U4.h  auth.h  breakout.h  cli.h  dio.h  doors.h  log.h  mempool.h  readers.h  settings.h  smp.h  ssmp.h  state.h  sys.h  trace.h  tty.h  txrx.h  uart.h  uart1.h  usb.h  wiegand.h
Rev.0/firmware/core/src/: ANSI.c  I2C0.c  I2C1.c  IOX.c  MIB.c  RTC.c  SPI.c  SSMP.c  U2.c  U3.c  U4.c  VT100.c  auth.c  breakout.c  cli.c  dio.c  doors.c  log.c  mempool.c  readers.c  settings.c  smp.c  ssmp.c  ssmpx.c  state.c  sys.c  trace.c  tty.c  txrx.c  uart.c  uart1.c  usb.c  wiegand.c
Rev.0/firmware/lib/include/: I2C.h  IIR.h  PCAL6408A.h  PCAL6408APW.h  PCAL6416A.h  PI4IOE5V6416.h  RX8900SA.h  lib.h
Rev.0/firmware/lib/src/: I2C.c  IIR.c  PCAL6408A.c  PCAL6408APW.c  PCAL6416A.c  PI4IOE5V6416.c  RX8900SA.c
Rev.0/firmware/pico/: CMakeLists.txt  Makefile
Rev.0/firmware/pico/include/: I2C0.h  PCAL6408APW.h  RX8900SA.h  breakout.h  cli.h  log.h  sys.h  uart.h
Rev.0/firmware/pico/src/: I2C0.c  PCAL6408APW.c  RX8900SA.c  cli.c  hwconfig.c  main.c  sys.c  uart.c
Rev.0/firmware/stub/: CMakeLists.txt  Makefile
Rev.0/firmware/stub/include/: log.h  stub.h  sys.h
Rev.0/firmware/stub/src/: hwconfig.c  log.c  main.c  stub.c  sys.c
Rev.0/firmware/test/: CMakeLists.txt  Makefile
Rev.0/firmware/test/include/auth/: auth.h
Rev.0/firmware/test/include/crypt/hash/: hash.h
Rev.0/firmware/test/include/crypt/hmac/: hmac.h
Rev.0/firmware/test/include/crypt/otp/: hotp.h
Rev.0/firmware/test/include/encoding/ASN.1/: ASN1.h
Rev.0/firmware/test/src/: hwconfig.c  main.c  sys.c
Rev.0/firmware/test/src/auth/: auth_test.c
Rev.0/firmware/test/src/crypt/hash/: sha1_test.c  sha256_test.c
Rev.0/firmware/test/src/crypt/hmac/: hmac_sha1_test.c
Rev.0/firmware/test/src/crypt/otp/: hotp_test.c
Rev.0/firmware/test/src/encoding/ASN.1/: BER_decode_test.c  BER_encode_test.c
Rev.0/firmware/tiny/: CMakeLists.txt  Makefile
Rev.0/firmware/tiny-uart/: CMakeLists.txt  Makefile
Rev.0/firmware/tiny-uart/src/: main.c  sys.c
Rev.0/firmware/tiny-usb/: CMakeLists.txt  Makefile
Rev.0/firmware/tiny-usb/include/: tusb_config.h
Rev.0/firmware/tiny-usb/src/: hwconfig.c  main.c  sys.c  usb_descriptors.c
Rev.0/firmware/tiny/include/: sys.h
Rev.0/firmware/tiny/src/: hwconfig.c  main.c  sys.c  uart.c
Rev.0/kicad/: BOM.md  NOTES.md  breakout.kicad_pcb  checklist.md
Rev.0/kicad Rev 0.0/: breakout.kicad_prl  breakout.kicad_pro  breakout.kicad_sch
Rev.0/kicad/v0.0/: breakout.kicad_pcb  breakout.kicad_sch
Rev.0/kicad/v0.1/: breakout.kicad_pcb  breakout.kicad_sch
Rev.0/logger/go/: Makefile
Rev.0/logging/go/: go.mod  go.sum
Rev.0/mvb/: MVB.md
Rev.0/mvb/tiny/: .gitignore  CMakeLists.txt  Makefile
Rev.0/mvb/tiny/src/: main.c  sys.c
Rev.0/scripts/: .gitignore  MIB.py  Makefile  RX8900SA-label.stl  RX8900SA-pins.stl  RX8900SA.mlp  djb2.py  sqlite3.sql
Rev.0/zero2w/cli/: .gitignore  Makefile  commands.py  main.py  pool.py  requirements.txt  tls.py
Rev.0/zero2w/dbd/: .gitignore  Makefile  go.mod
Rev.0/zero2w/dbd/db/: db.go
Rev.0/zero2w/debug/: pyproject.toml
Rev.0/zero2w/eventd/: Makefile  go.mod  go.sum
Rev.0/zero2w/rpcd/: .cacheable.json  Makefile  go.mod
Rev.0/zero2w/ut0311/: .config.localhost  .config.rpi3  .config.stub  .config.unix  .config.zero2w  Makefile  get-door.go  go.mod  go.sum
documentation/: PINS.md
documentation/Rev.0/: BOM.md
documentation/dsp/: IIR.py  IIR_1Hz.py  IIR_25Hz.py  IIR_5Hz.py  RC.py  debounce.py
documentation/ssmp/: MIB.md  SSMP.md  SSMP.mib
kicad/Rev.0/: NOTES.md  breakout.kicad_prl  breakout.kicad_sch  checklist.md
kicad/Rev.0/gerber/: NOTES.md
scripts/: MIB.h  RX8900SA-body.stl  RX8900SA-dot.stl  RX8900SA.scad  djb2.py  struct.c
(+263 files in other folders)
