[project]
name = "uhppoted-breakout SSMPP Driver Simulator"
version = "0.0.0.0"
authors = [
  { name="uhppoted", email="uhppoted.development@gmail.com" },
]
description = "Python simulator the breakout board SSMP interface"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/uhppoted/uhppoted-breakout"
"Bug Tracker" = "https://github.com/uhppoted/uhppoted-breakout/issues"

[project.optional-dependencies]
dev = [
    "yapf ~=0.32.0",
]
test = [
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.yapfignore]
based_on_style = "pep8"
column_limit = 120
